# AppGUI

./: .env  Cargo.toml  curso.sqlite  diesel.toml  diesel_cli.txt
migrations/2023-05-29-182924_curso-rust/: down.sql  up.sql
src/: entidad.rs  main.rs  presentacion.rs  presentacion2.rs  repository.rs  schema.rs
src/csv/: tipo-vivienda.csv
src/json/: personas.json  tipo-vivienda.json
