[package]
name = "AppGUI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk="1.3.13"
fltk-table="0.2.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
csv = "1.1" 
diesel = { version = "2.0.3", features = ["sqlite"] }
dotenv = "0.15.0"
uuid = "1.3.0"

[dependencies.rusqlite]
version = "0.26.2"
features = ["bundled"]